// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query sites SITES parametrized query returns expected result 1`] = `
Object {
  "sites": Array [
    Object {
      "env": "2008ownersclub",
      "migrated": Array [
        "HtmlToBBCode_migration",
        "StaticContent_migration",
        "entity_titles_mapping_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "2008ownersclub.co.uk",
      "source": true,
    },
    Object {
      "env": "artistforum",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "artistforum.com",
      "source": true,
    },
    Object {
      "env": "astrosafari",
      "migrated": Array [],
      "retroactive": false,
      "sitename": "astrosafari.com",
      "source": true,
    },
    Object {
      "env": "blowgunforum",
      "migrated": Array [
        "IpsForums_migration",
      ],
      "retroactive": true,
      "sitename": "blowgunforum.com",
      "source": true,
    },
    Object {
      "env": "cichlidforum",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "cichlid-forum.com",
      "source": true,
    },
    Object {
      "env": "clubtread",
      "migrated": Array [],
      "retroactive": true,
      "sitename": "clubtread.com",
      "source": true,
    },
    Object {
      "env": "coffeeforums",
      "migrated": Array [],
      "retroactive": true,
      "sitename": "coffeeforums.co.uk",
      "source": true,
    },
    Object {
      "env": "crxcommunity",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "crxcommunity.com",
      "source": true,
    },
    Object {
      "env": "cumminsforum",
      "migrated": Array [],
      "retroactive": false,
      "sitename": "cumminsforum.com",
      "source": true,
    },
    Object {
      "env": "fordescape",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "fordescape.org",
      "source": true,
    },
    Object {
      "env": "goosehuntingchat",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "goosehuntingchat.com",
      "source": true,
    },
    Object {
      "env": "gt350",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin4_migration",
      ],
      "retroactive": true,
      "sitename": "gt350.org",
      "source": true,
    },
    Object {
      "env": "havaneseforum",
      "migrated": Array [
        "LinkLibrary_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "havaneseforum.com",
      "source": true,
    },
    Object {
      "env": "haytalk",
      "migrated": Array [
        "IpsForums_migration",
        "IpsGallery_migration",
      ],
      "retroactive": true,
      "sitename": "haytalk.com",
      "source": true,
    },
    Object {
      "env": "hotrodders",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "hotrodders.com",
      "source": true,
    },
    Object {
      "env": "hyundaicoupeclub",
      "migrated": Array [
        "PhpBb_migration",
        "entity_titles_mapping_migration",
      ],
      "retroactive": true,
      "sitename": "hyundaicoupeclub.co.uk",
      "source": true,
    },
    Object {
      "env": "icefishingchat",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "icefishingchat.com",
      "source": true,
    },
    Object {
      "env": "jeepforum",
      "migrated": Array [
        "JeepforumReviews_migration",
        "StaticContent_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "jeepforum.com",
      "source": true,
    },
    Object {
      "env": "jenkins",
      "migrated": Array [
        "DTOGarage_migration",
        "Photoplog_migration",
        "PhotopostPro_migration",
        "entity_titles_mapping_migration",
        "vBGallery_migration",
        "vBGarage_migration",
        "vBProGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "unittest",
      "source": true,
    },
    Object {
      "env": "liveartist",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "artistforum.com",
      "source": true,
    },
    Object {
      "env": "masterreg",
      "migrated": Array [],
      "retroactive": false,
      "sitename": "masterreg.com",
      "source": true,
    },
    Object {
      "env": "mondeostoc",
      "migrated": Array [],
      "retroactive": true,
      "sitename": "mondeostoc.com",
      "source": true,
    },
    Object {
      "env": "motorgeek",
      "migrated": Array [
        "PhpBbGallery2_migration",
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "motorgeek.com",
      "source": true,
    },
    Object {
      "env": "newninja",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "newninja.com",
      "source": true,
    },
    Object {
      "env": "piranhafury",
      "migrated": Array [],
      "retroactive": true,
      "sitename": "piranha-fury.com",
      "source": true,
    },
    Object {
      "env": "qa",
      "migrated": Array [],
      "retroactive": true,
      "sitename": "coffeeforums.co.uk",
      "source": true,
    },
    Object {
      "env": "scirocconet",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "scirocconet.co.uk",
      "source": true,
    },
    Object {
      "env": "seatforum",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "retroactive": true,
      "sitename": "seat-forum.co.uk",
      "source": true,
    },
    Object {
      "env": "shotgunworld",
      "migrated": Array [],
      "retroactive": false,
      "sitename": "shotgunworld.com",
      "source": true,
    },
    Object {
      "env": "tccoa",
      "migrated": Array [
        "DTOGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "tccoa.com",
      "source": true,
    },
    Object {
      "env": "test",
      "migrated": Array [
        "DTOGarage_migration",
        "Photoplog_migration",
        "PhotopostPro_migration",
        "entity_titles_mapping_migration",
        "vBGallery_migration",
        "vBGarage_migration",
        "vBProGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "unittest",
      "source": true,
    },
    Object {
      "env": "thenewx",
      "migrated": Array [
        "DBTechReviews_migration",
        "GenericBasicImporter_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "thenewx.org",
      "source": true,
    },
    Object {
      "env": "tidalfish",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin4WithBlog_migration",
      ],
      "retroactive": true,
      "sitename": "tidalfish.com",
      "source": true,
    },
    Object {
      "env": "tractorforum",
      "migrated": Array [
        "XenForo21_migration",
      ],
      "retroactive": true,
      "sitename": "tractorforum.com",
      "source": true,
    },
    Object {
      "env": "tradtalk",
      "migrated": Array [
        "JeepforumReviews_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "retroactive": true,
      "sitename": "tradtalk.com",
      "source": true,
    },
    Object {
      "env": "v6z24",
      "migrated": Array [
        "PhpBbGallery2_migration",
        "PhpBb_migration",
        "Registry_migration",
      ],
      "retroactive": true,
      "sitename": "v6z24.com",
      "source": true,
    },
  ],
}
`;

exports[`Query sites SITES query returns expected result 1`] = `
Object {
  "sites": Array [
    Object {
      "env": "1130cc",
      "migrated": Array [],
      "sitename": "1130cc.com",
      "source": false,
    },
    Object {
      "env": "1911talk",
      "migrated": Array [],
      "sitename": "1911talk.com",
      "source": false,
    },
    Object {
      "env": "2008ownersclub",
      "migrated": Array [
        "HtmlToBBCode_migration",
        "StaticContent_migration",
        "entity_titles_mapping_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "sitename": "2008ownersclub.co.uk",
      "source": true,
    },
    Object {
      "env": "68forums",
      "migrated": Array [],
      "sitename": "68forums.com",
      "source": false,
    },
    Object {
      "env": "allfordmustangs",
      "migrated": Array [],
      "sitename": "allfordmustangs.com",
      "source": false,
    },
    Object {
      "env": "artistforum",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "artistforum.com",
      "source": true,
    },
    Object {
      "env": "astrosafari",
      "migrated": Array [],
      "sitename": "astrosafari.com",
      "source": true,
    },
    Object {
      "env": "audiq3forum",
      "migrated": Array [],
      "sitename": "audiq3forum.com",
      "source": false,
    },
    Object {
      "env": "basketballforum",
      "migrated": Array [],
      "sitename": "basketballforum.com",
      "source": false,
    },
    Object {
      "env": "blowgunforum",
      "migrated": Array [
        "IpsForums_migration",
      ],
      "sitename": "blowgunforum.com",
      "source": true,
    },
    Object {
      "env": "cadillacatsforum",
      "migrated": Array [],
      "sitename": "cadillacatsforum.com",
      "source": false,
    },
    Object {
      "env": "camaros",
      "migrated": Array [],
      "sitename": "camaros.net",
      "source": false,
    },
    Object {
      "env": "canamforum",
      "migrated": Array [],
      "sitename": "can-amforum.com",
      "source": false,
    },
    Object {
      "env": "chevroletcruze",
      "migrated": Array [],
      "sitename": "chevroletcruze.net",
      "source": false,
    },
    Object {
      "env": "chevybolt",
      "migrated": Array [],
      "sitename": "chevybolt.org",
      "source": false,
    },
    Object {
      "env": "cichlidforum",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "cichlid-forum.com",
      "source": true,
    },
    Object {
      "env": "clubtouareg",
      "migrated": Array [],
      "sitename": "clubtouareg.com",
      "source": false,
    },
    Object {
      "env": "clubtread",
      "migrated": Array [],
      "sitename": "clubtread.com",
      "source": true,
    },
    Object {
      "env": "coffeeforums",
      "migrated": Array [],
      "sitename": "coffeeforums.co.uk",
      "source": true,
    },
    Object {
      "env": "cruzetalk",
      "migrated": Array [],
      "sitename": "cruzetalk.com",
      "source": false,
    },
    Object {
      "env": "crxcommunity",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "crxcommunity.com",
      "source": true,
    },
    Object {
      "env": "cumminsforum",
      "migrated": Array [],
      "sitename": "cumminsforum.com",
      "source": true,
    },
    Object {
      "env": "custommagnums",
      "migrated": Array [],
      "sitename": "custommagnums.com",
      "source": false,
    },
    Object {
      "env": "defenderforums",
      "migrated": Array [],
      "sitename": "defenderforums.net",
      "source": false,
    },
    Object {
      "env": "digitalhome",
      "migrated": Array [],
      "sitename": "digitalhome.ca",
      "source": false,
    },
    Object {
      "env": "dogfoodchat",
      "migrated": Array [],
      "sitename": "dogfoodchat.com",
      "source": false,
    },
    Object {
      "env": "dseries",
      "migrated": Array [],
      "sitename": "d-series.org",
      "source": false,
    },
    Object {
      "env": "evotuners",
      "migrated": Array [],
      "sitename": "evotuners.net",
      "source": false,
    },
    Object {
      "env": "focusrsclub",
      "migrated": Array [],
      "sitename": "focusrsclub.com",
      "source": false,
    },
    Object {
      "env": "focusst",
      "migrated": Array [],
      "sitename": "focusst.org",
      "source": false,
    },
    Object {
      "env": "fordescape",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "fordescape.org",
      "source": true,
    },
    Object {
      "env": "fordtough",
      "migrated": Array [],
      "sitename": "fordtough.ca",
      "source": false,
    },
    Object {
      "env": "fullsizebronco",
      "migrated": Array [],
      "sitename": "fullsizebronco.com",
      "source": false,
    },
    Object {
      "env": "fz07oc",
      "migrated": Array [],
      "sitename": "fz07oc.com",
      "source": false,
    },
    Object {
      "env": "g5club",
      "migrated": Array [],
      "sitename": "g5club.net",
      "source": false,
    },
    Object {
      "env": "g8board",
      "migrated": Array [],
      "sitename": "g8board.com",
      "source": false,
    },
    Object {
      "env": "gacforums",
      "migrated": Array [],
      "sitename": "gacforums.com",
      "source": false,
    },
    Object {
      "env": "gminsidenews",
      "migrated": Array [],
      "sitename": "gminsidenews.com",
      "source": false,
    },
    Object {
      "env": "goosehuntingchat",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "goosehuntingchat.com",
      "source": true,
    },
    Object {
      "env": "gt350",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin4_migration",
      ],
      "sitename": "gt350.org",
      "source": true,
    },
    Object {
      "env": "halloweenforum",
      "migrated": Array [],
      "sitename": "halloweenforum.com",
      "source": false,
    },
    Object {
      "env": "havaneseforum",
      "migrated": Array [
        "LinkLibrary_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "havaneseforum.com",
      "source": true,
    },
    Object {
      "env": "haytalk",
      "migrated": Array [
        "IpsForums_migration",
        "IpsGallery_migration",
      ],
      "sitename": "haytalk.com",
      "source": true,
    },
    Object {
      "env": "hdlivewireforum",
      "migrated": Array [],
      "sitename": "hdlivewireforum.com",
      "source": false,
    },
    Object {
      "env": "hellcat",
      "migrated": Array [],
      "sitename": "hellcat.org",
      "source": false,
    },
    Object {
      "env": "hobbytalk",
      "migrated": Array [],
      "sitename": "hobbytalk.com",
      "source": false,
    },
    Object {
      "env": "horseforum",
      "migrated": Array [],
      "sitename": "horseforum.com",
      "source": false,
    },
    Object {
      "env": "hotrodders",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "sitename": "hotrodders.com",
      "source": true,
    },
    Object {
      "env": "hrvforum",
      "migrated": Array [],
      "sitename": "hrvforum.com",
      "source": false,
    },
    Object {
      "env": "hyundaicoupeclub",
      "migrated": Array [
        "PhpBb_migration",
        "entity_titles_mapping_migration",
      ],
      "sitename": "hyundaicoupeclub.co.uk",
      "source": true,
    },
    Object {
      "env": "icefishingchat",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "icefishingchat.com",
      "source": true,
    },
    Object {
      "env": "ilxforums",
      "migrated": Array [],
      "sitename": "ilxforums.com",
      "source": false,
    },
    Object {
      "env": "indianmotorcycles",
      "migrated": Array [],
      "sitename": "indianmotorcycles.net",
      "source": false,
    },
    Object {
      "env": "jeepforum",
      "migrated": Array [
        "JeepforumReviews_migration",
        "StaticContent_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "jeepforum.com",
      "source": true,
    },
    Object {
      "env": "jenkins",
      "migrated": Array [
        "DTOGarage_migration",
        "Photoplog_migration",
        "PhotopostPro_migration",
        "entity_titles_mapping_migration",
        "vBGallery_migration",
        "vBGarage_migration",
        "vBProGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "sitename": "unittest",
      "source": true,
    },
    Object {
      "env": "kiaforums",
      "migrated": Array [],
      "sitename": "kia-forums.com",
      "source": false,
    },
    Object {
      "env": "liveartist",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "artistforum.com",
      "source": true,
    },
    Object {
      "env": "maseratilife",
      "migrated": Array [],
      "sitename": "maseratilife.com",
      "source": false,
    },
    Object {
      "env": "masterreg",
      "migrated": Array [],
      "sitename": "masterreg.com",
      "source": true,
    },
    Object {
      "env": "minitorque",
      "migrated": Array [],
      "sitename": "minitorque.com",
      "source": false,
    },
    Object {
      "env": "modeltrainforum",
      "migrated": Array [],
      "sitename": "modeltrainforum.com",
      "source": false,
    },
    Object {
      "env": "mondeostoc",
      "migrated": Array [],
      "sitename": "mondeostoc.com",
      "source": true,
    },
    Object {
      "env": "motorgeek",
      "migrated": Array [
        "PhpBbGallery2_migration",
        "PhpBb_migration",
      ],
      "sitename": "motorgeek.com",
      "source": true,
    },
    Object {
      "env": "my",
      "migrated": Array [],
      "sitename": "my.is",
      "source": false,
    },
    Object {
      "env": "myfastgti",
      "migrated": Array [],
      "sitename": "myfastgti.com",
      "source": false,
    },
    Object {
      "env": "newninja",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "newninja.com",
      "source": true,
    },
    Object {
      "env": "nissanclub",
      "migrated": Array [],
      "sitename": "nissanclub.com",
      "source": false,
    },
    Object {
      "env": "nokiausers",
      "migrated": Array [],
      "sitename": "nokiausers.net",
      "source": false,
    },
    Object {
      "env": "olddefender",
      "migrated": Array [],
      "sitename": "defenderforums.net",
      "source": false,
    },
    Object {
      "env": "paintballforum",
      "migrated": Array [],
      "sitename": "paintballforum.com",
      "source": false,
    },
    Object {
      "env": "palisadeforum",
      "migrated": Array [],
      "sitename": "palisadeforum.com",
      "source": false,
    },
    Object {
      "env": "piloteers",
      "migrated": Array [],
      "sitename": "piloteers.org",
      "source": false,
    },
    Object {
      "env": "piranhafury",
      "migrated": Array [],
      "sitename": "piranha-fury.com",
      "source": true,
    },
    Object {
      "env": "qa",
      "migrated": Array [],
      "sitename": "coffeeforums.co.uk",
      "source": true,
    },
    Object {
      "env": "r8talk",
      "migrated": Array [],
      "sitename": "r8talk.com",
      "source": false,
    },
    Object {
      "env": "ratforum",
      "migrated": Array [],
      "sitename": "ratforum.com",
      "source": false,
    },
    Object {
      "env": "rav4world",
      "migrated": Array [],
      "sitename": "rav4world.com",
      "source": false,
    },
    Object {
      "env": "scirocconet",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "scirocconet.co.uk",
      "source": true,
    },
    Object {
      "env": "scramblerforum",
      "migrated": Array [],
      "sitename": "scramblerforum.com",
      "source": false,
    },
    Object {
      "env": "seatforum",
      "migrated": Array [
        "PhpBb_migration",
      ],
      "sitename": "seat-forum.co.uk",
      "source": true,
    },
    Object {
      "env": "shotgunworld",
      "migrated": Array [],
      "sitename": "shotgunworld.com",
      "source": true,
    },
    Object {
      "env": "siennachat",
      "migrated": Array [],
      "sitename": "siennachat.com",
      "source": false,
    },
    Object {
      "env": "sitename",
      "migrated": Array [],
      "sitename": "sitename.com",
      "source": false,
    },
    Object {
      "env": "slingshotforums",
      "migrated": Array [],
      "sitename": "slingshotforums.com",
      "source": false,
    },
    Object {
      "env": "speakev",
      "migrated": Array [],
      "sitename": "speakev.com",
      "source": false,
    },
    Object {
      "env": "srtforums",
      "migrated": Array [],
      "sitename": "srtforums.com",
      "source": false,
    },
    Object {
      "env": "ssrfanatic",
      "migrated": Array [],
      "sitename": "ssrfanatic.com",
      "source": false,
    },
    Object {
      "env": "stingrayforums",
      "migrated": Array [],
      "sitename": "stingrayforums.com",
      "source": false,
    },
    Object {
      "env": "subaruforester",
      "migrated": Array [],
      "sitename": "subaruforester.org",
      "source": false,
    },
    Object {
      "env": "taurusclub",
      "migrated": Array [],
      "sitename": "taurusclub.com",
      "source": false,
    },
    Object {
      "env": "tbssowners",
      "migrated": Array [],
      "sitename": "tbssowners.com",
      "source": false,
    },
    Object {
      "env": "tccoa",
      "migrated": Array [
        "DTOGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "sitename": "tccoa.com",
      "source": true,
    },
    Object {
      "env": "test",
      "migrated": Array [
        "DTOGarage_migration",
        "Photoplog_migration",
        "PhotopostPro_migration",
        "entity_titles_mapping_migration",
        "vBGallery_migration",
        "vBGarage_migration",
        "vBProGarage_migration",
        "vBulletinAlbums3_migration",
        "vBulletin_migration",
      ],
      "sitename": "unittest",
      "source": true,
    },
    Object {
      "env": "thenewx",
      "migrated": Array [
        "DBTechReviews_migration",
        "GenericBasicImporter_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "thenewx.org",
      "source": true,
    },
    Object {
      "env": "theprofilebrotherhood",
      "migrated": Array [],
      "sitename": "theprofilebrotherhood.com",
      "source": false,
    },
    Object {
      "env": "tidalfish",
      "migrated": Array [
        "entity_titles_mapping_migration",
        "vBulletin4WithBlog_migration",
      ],
      "sitename": "tidalfish.com",
      "source": true,
    },
    Object {
      "env": "tractorforum",
      "migrated": Array [
        "XenForo21_migration",
      ],
      "sitename": "tractorforum.com",
      "source": true,
    },
    Object {
      "env": "tradtalk",
      "migrated": Array [
        "JeepforumReviews_migration",
        "entity_titles_mapping_migration",
        "vBulletin_migration",
      ],
      "sitename": "tradtalk.com",
      "source": true,
    },
    Object {
      "env": "trailvoy",
      "migrated": Array [],
      "sitename": "trailvoy.com",
      "source": false,
    },
    Object {
      "env": "tundratalk",
      "migrated": Array [],
      "sitename": "tundratalk.net",
      "source": false,
    },
    Object {
      "env": "v6z24",
      "migrated": Array [
        "PhpBbGallery2_migration",
        "PhpBb_migration",
        "Registry_migration",
      ],
      "sitename": "v6z24.com",
      "source": true,
    },
    Object {
      "env": "vtwinforum",
      "migrated": Array [],
      "sitename": "v-twinforum.com",
      "source": false,
    },
  ],
}
`;
